--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import com.modrinth.minotaur.dependencies.ModDependency
 
 plugins {
-    id 'fabric-loom' version '1.4-SNAPSHOT'
+    id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
 
     // 用于模组发布
@@ -56,9 +56,9 @@ allprojects {
         // BRRP 模组
         def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
         modImplementation "pers.solid:brrp-fabric:${project.brrp_version}-${brrp_mc_version}"
-    // 合理排序模组
-    def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
-    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
+        // 合理排序模组
+        def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
+        modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
 
         // 由于新版的 Loom 没有 @CanIgnoreReturnValue 等注解，故在这里手动添加。
         modImplementation "com.google.errorprone:error_prone_annotations:+"
@@ -220,7 +220,7 @@ modrinth {
     versionNumber = "${rootProject.mod_version}-${platform}-${rootProject.minecraft_version}"
     versionType = release_type
     uploadFile = remapJar
-    gameVersions = (project.supported_minecraft_versions as String).split(',') as List<String>
+    gameVersions = project.supported_minecraft_versions.isEmpty() ? List.of(rootProject.minecraft_version) : (project.supported_minecraft_versions as String).split(',') as List<String>
     loaders = [platform]
     var dependenciesList = [new ModDependency('JnrDtPAE', 'required')] // brrp
     if (platform == 'fabric') dependenciesList.add new ModDependency('P7dR8mSH', 'required') // Fabric API
@@ -237,7 +237,7 @@ githubRelease {
     owner = "SolidBlock-cn"
     repo = "extshape"
     tagName = "v$project.mod_version"
-    targetCommitish = "1.20.1"
+    targetCommitish = "1.20.4"
     body = changelogContent
     draft = true
     prerelease = false
