--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.2
 supported_minecraft_versions=1.19,1.19.1,1.19.2
-loader_version=0.15.1
+loader_version=0.15.6
 yarn_mappings=1.19.2+build.28
 fabric.loom.multiProjectOptimisation = true
 
@@ -23,12 +23,13 @@ blockus_version=4671264
 terraform_version=4.2.0
 reasonable_sorting_version=2.1.0
 imblocker_version=4605195
-rei_version=9.1.682
+# considering potential issues, I do not enable REI here
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
-loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-loom_fabric_repository=https://repository.hanbings.io/proxy/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+#loom_fabric_repository=https://repository.hanbings.io/proxy/
