修复错误的声音字幕

--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ allprojects {
 
     jar {
         from("LICENSE") {
-            rename { "${it}_${project.base.archivesName}" }
+            rename { "${it}_${base.archivesName.get()}" }
         }
     }
 
