取消 REI 的安装（仅限 1.19.3 分支）

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ brrp_version=1.0.1
 blockus_version=4411968
 terraform_version=5.0.0
 imblocker_version=4605195
-rei_version=10.0.646
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
