更新至 2.1.4（合并的提交） 修复竖直台阶没有 uvlock 的问题 加入 conventional tags 并更新文档 将模组中增加的音频加入注册表；将彩色方块加入 fabric conventional tags 更新文档 完善纹理 微调了创造模式物品栏中部分物品的排序。一些已经在建筑方块中显示的物品不再在自然中重复显示 修复与铜有关的数据与原版命名空间重复的问题

--- a/with_blockus/build.gradle
+++ b/with_blockus/build.gradle
@@ -9,11 +9,15 @@ base {
 version = rootProject.mod_version + '-mc' + rootProject.minecraft_version
 group = rootProject.maven_group
 repositories {
-    // CurseMaven，用于加载其他模组
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+        filter {
+            includeGroup "maven.modrinth"
         }
     }
 }
@@ -23,7 +27,7 @@ dependencies {
         exclude module: "fabric-loader"
     }
     modCompileOnly "com.terraformersmc.terraform-api:terraform-shapes-api-v1:${project.terraform_version}"
-    modApi "curse.maven:blockus-312289:${project.blockus_version}"
+    modApi "maven.modrinth:blockus:${project.blockus_version}"
     implementation project(path: ':', configuration: "namedElements")
 }
 
