--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,8 @@ allprojects {
 
     publishing {
         publications {
-            mavenJava(MavenPublication) {
+            create("mavenJava", MavenPublication) {
+                artifactId = project.archives_base_name
                 from components.java
             }
         }
@@ -129,7 +130,7 @@ allprojects {
 }
 
 ext {
-    release_type = mod_version.contains('beta') ? 'beta' : 'release' as String
+    release_type = mod_version.contains('alpha') ? 'alpha' : mod_version.contains('beta') ? 'beta' : 'release' as String
 }
 
 subprojects {
@@ -234,7 +235,7 @@ githubRelease {
     owner = "SolidBlock-cn"
     repo = "extshape"
     tagName = "v$project.mod_version"
-    targetCommitish = "1.20.4"
+    targetCommitish = "1.20.6"
     body = changelogContent
     draft = true
     prerelease = false
