--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ minecraft_version=1.20.1
 supported_minecraft_versions=1.20,1.20.1
 loader_version=0.15.11
 yarn_mappings=1.20.1+build.10
-fabric.loom.multiProjectOptimisation=true
+fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
-mod_version=2.1.2
+mod_version=2.1.4
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -19,10 +19,10 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.91.0+1.20.1
 modmenu_version=7.1.0
 brrp_version=1.0.1
-blockus_version=5067058
+blockus_version=2.7.15+1.20.1
 terraform_version=7.0.2
 imblocker_version=4605195
-rei_version=12.0.684
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
