更新至 2.1.4（合并的提交） 修复竖直台阶没有 uvlock 的问题 加入 conventional tags 并更新文档 将模组中增加的音频加入注册表；将彩色方块加入 fabric conventional tags 更新文档 完善纹理 微调了创造模式物品栏中部分物品的排序。一些已经在建筑方块中显示的物品不再在自然中重复显示 修复与铜有关的数据与原版命名空间重复的问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ minecraft_version=1.20.2
 supported_minecraft_versions=1.20.2
 loader_version=0.15.11
 yarn_mappings=1.20.2+build.4
-fabric.loom.multiProjectOptimisation=true
+fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
-mod_version=2.1.2
+mod_version=2.1.4
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -19,10 +19,10 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.91.6+1.20.2
 modmenu_version=8.0.0
 brrp_version=1.0.2
-blockus_version=5067061
+blockus_version=2.7.14+1.20.2
 terraform_version=8.0.1
 imblocker_version=4605195
-rei_version=13.0.685
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
