--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ minecraft_version=1.20.4
 supported_minecraft_versions=1.20.3,1.20.4
 loader_version=0.15.11
 yarn_mappings=1.20.4+build.3
-fabric.loom.multiProjectOptimisation=true
+fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
-mod_version=2.1.2
+mod_version=2.1.4
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -19,10 +19,10 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.97.1+1.20.4
 modmenu_version=9.0.0
 brrp_version=1.0.3
-blockus_version=5056588
+blockus_version=2.8.8+1.20.4
 terraform_version=9.0.0
 imblocker_version=4605195
-rei_version=14.0.688
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
