--- a/gradle.properties
+++ b/gradle.properties
@@ -3,26 +3,26 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.4
-supported_minecraft_versions=1.20.3,1.20.4
+minecraft_version=24w10a
+supported_minecraft_versions=24w10a
 loader_version=0.15.7
-yarn_mappings=1.20.4+build.3
+yarn_mappings=24w10a+build.7
 fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.1.2
+mod_version=2.1.2-alpha.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.96.4+1.20.4
-modmenu_version=9.0.0
-brrp_version=1.0.3
-blockus_version=5056588
-terraform_version=9.0.0
+fabric_api_version=0.96.8+1.20.5
+modmenu_version=10.0.0-alpha.1
+brrp_version=1.0.3-alpha.1
+blockus_version=
+terraform_version=
 imblocker_version=4605195
-rei_version=14.0.688
+rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
