版本更新至 1.20.6，Fabric Loader 0.15.11，Loom 1.6，完善纹理

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,22 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=24w10a
-supported_minecraft_versions=24w10a
-loader_version=0.15.7
-yarn_mappings=24w10a+build.7
+minecraft_version=1.20.6
+supported_minecraft_versions=1.20.5,1.20.6
+loader_version=0.15.11
+yarn_mappings=1.20.6+build.1
 fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.1.2-alpha.1
+mod_version=2.1.2-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.96.8+1.20.5
-modmenu_version=10.0.0-alpha.1
-brrp_version=1.0.3-alpha.1
+fabric_api_version=0.98.0+1.20.6
+modmenu_version=10.0.0-beta.1
+brrp_version=1.0.3
 blockus_version=
 terraform_version=
 imblocker_version=4605195
