--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import com.modrinth.minotaur.dependencies.ModDependency
 
 plugins {
-    id 'fabric-loom' version '1.5-SNAPSHOT'
+    id 'fabric-loom' version '1.6-SNAPSHOT'
     id 'maven-publish'
 
     // 用于模组发布
@@ -98,7 +98,8 @@ allprojects {
 
     publishing {
         publications {
-            mavenJava(MavenPublication) {
+            create("mavenJava", MavenPublication) {
+                artifactId = project.archives_base_name
                 from components.java
             }
         }
@@ -234,7 +235,7 @@ githubRelease {
     owner = "SolidBlock-cn"
     repo = "extshape"
     tagName = "v$project.mod_version"
-    targetCommitish = "1.20.4"
+    targetCommitish = "1.20.6"
     body = changelogContent
     draft = true
     prerelease = false
