--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.20.6+build.1
 fabric.loom.multiProjectOptimisation=true
 
 # Mod Properties
-mod_version=2.1.2-beta.1
+mod_version=2.1.3
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
