--- a/gradle.properties
+++ b/gradle.properties
@@ -19,8 +19,8 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.98.0+1.20.6
 modmenu_version=10.0.0-beta.1
 brrp_version=1.0.3
-blockus_version=
-terraform_version=
+blockus_version=2.8.7+1.20.6
+terraform_version=10.0.0-beta.1
 imblocker_version=4605195
 rei_version=
 
