--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.18.1
 supported_minecraft_versions=1.18.1
-loader_version=0.15.7
+loader_version=0.15.11
 yarn_mappings=1.18.1+build.22
 fabric.loom.multiProjectOptimisation=true
 
@@ -22,9 +22,9 @@ brrp_version=1.0.0
 reasonable_sorting_version=2.1.0
 
 # Loom Properties
-## If the build fails, try comment out or undo commenting some of the following lines.
-##loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-##loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-##loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
-##loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-##loom_fabric_repository=https://repository.hanbings.io/proxy/
+# If the build fails, try comment out or undo commenting some of the following lines.
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+loom_fabric_repository=https://repository.hanbings.io/proxy/
