--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,8 @@ rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
-#loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-#loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
+loom_fabric_repository=https://repository.hanbings.io/proxy/
