适应 1.21 的更新

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.20.6
-supported_minecraft_versions=1.20.5,1.20.6
+minecraft_version=1.21
+supported_minecraft_versions=1.21
 loader_version=0.15.11
-yarn_mappings=1.20.6+build.3
-fabric.loom.multiProjectOptimisation=true
+yarn_mappings=1.21+build.2
+fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
 mod_version=2.1.3
@@ -16,11 +16,11 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.100.0+1.20.6
-modmenu_version=10.0.0-beta.1
+fabric_api_version=0.100.1+1.21
+modmenu_version=11.0.0-beta.2
 brrp_version=1.0.3
-blockus_version=2.8.7+1.20.6
-terraform_version=10.0.0-beta.1
+blockus_version=2.9.0+1.21
+terraform_version=11.0.0-alpha.1
 imblocker_version=4605195
 rei_version=
 
