--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,8 @@ allprojects {
 
     publishing {
         publications {
-            mavenJava(MavenPublication) {
+            create("mavenJava", MavenPublication) {
+                artifactId = project.archives_base_name
                 from components.java
             }
         }
@@ -132,7 +133,7 @@ allprojects {
 }
 
 ext {
-    release_type = mod_version.contains('beta') ? 'beta' : 'release' as String
+    release_type = mod_version.contains('alpha') ? 'alpha' : mod_version.contains('beta') ? 'beta' : 'release' as String
 }
 
 subprojects {
