--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,9 @@ minecraft_version=1.20.4
 supported_minecraft_versions=1.20.3,1.20.4
 loader_version=0.15.11
 yarn_mappings=1.20.4+build.3
-fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
-mod_version=2.2.1
+mod_version=2.2.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
@@ -18,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 # Dependencies
 fabric_api_version=0.97.1+1.20.4
 modmenu_version=9.0.0
-brrp_version=1.0.3
+brrp_version=1.0.4
 blockus_version=2.8.8+1.20.4
 terraform_version=9.0.0
 imblocker_version=4605195
@@ -26,7 +25,7 @@ rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
