--- a/gradle.properties
+++ b/gradle.properties
@@ -7,26 +7,25 @@ minecraft_version=1.20.6
 supported_minecraft_versions=1.20.5,1.20.6
 loader_version=0.15.11
 yarn_mappings=1.20.6+build.3
-fabric.loom.multiProjectOptimisation=false
 
 # Mod Properties
-mod_version=2.2.1
+mod_version=2.2.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.100.4+1.20.6
-modmenu_version=10.0.0-beta.1
-brrp_version=1.0.3
-blockus_version=2.8.9+1.20.6
+fabric_api_version=0.100.8+1.20.6
+modmenu_version=10.0.0
+brrp_version=1.0.4
+blockus_version=2.8.10+1.20.6
 terraform_version=10.0.0-beta.1
 imblocker_version=4605195
 rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
