--- a/gradle.properties
+++ b/gradle.properties
@@ -3,30 +3,29 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.21
-supported_minecraft_versions=1.21
+minecraft_version=1.21.1
+supported_minecraft_versions=1.21,1.21.1
 loader_version=0.15.11
-yarn_mappings=1.21+build.9
-fabric.loom.multiProjectOptimisation=false
+yarn_mappings=1.21.1+build.3
 
 # Mod Properties
-mod_version=2.2.1
+mod_version=2.2.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.100.1+1.21
-modmenu_version=11.0.0-beta.2
-brrp_version=1.0.3
-blockus_version=2.9.1+1.21
+fabric_api_version=0.102.1+1.21.1
+modmenu_version=11.0.1
+brrp_version=1.0.4
+blockus_version=2.9.2+1.21.1
 terraform_version=11.0.0-alpha.1
 imblocker_version=4605195
 rei_version=
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
