--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ yarn_mappings=1.21.1+build.3
 
 # Mod Properties
 mod_version=2.3.0
-maven_group=pers.solid.extshape
+maven_group=pers.solid
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
@@ -18,7 +18,7 @@ archives_base_name_blockus=extshape_blockus
 fabric_api_version=0.104.0+1.21.1
 modmenu_version=11.0.1
 brrp_version=1.1.0
-blockus_version=2.9.4+1.21.1
+blockus_version=2.9.5+1.21.1
 terraform_version=11.0.0-alpha.1
 imblocker_version=4605195
 rei_version=
