--- a/gradle.properties
+++ b/gradle.properties
@@ -9,13 +9,13 @@ loader_version=0.16.5
 yarn_mappings=1.21.1+build.3
 
 # Mod Properties
-mod_version=2.3.0
+mod_version=3.0.0-beta.1
 maven_group=pers.solid
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.104.0+1.21.1
+fabric_api_version=0.105.0+1.21.1
 modmenu_version=11.0.1
 brrp_version=1.1.0
 blockus_version=2.9.5+1.21.1
