Revert "update build.gradle (test)"
This reverts commit 9601293af999ab89f26d925f0361fcd99a7a0e61.

--- a/build.gradle
+++ b/build.gradle
@@ -150,9 +150,8 @@ project(':runtest') {
         }
     }
 
-    [tasks.remapJar, tasks.remapSourcesJar, tasks.build, tasks.publish].each {
-        it.dependsOn rootProject.tasks.named(it.name)
-        it.dependsOn project(':with_blockus').tasks.named(it.name)
+    [tasks.remapJar, tasks.remapSourcesJar, tasks.build].each {
+        it.enabled = false
     }
 }
 
