--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=24w40a
-supported_minecraft_versions=24w40a
+minecraft_version=1.21.2-pre1
+supported_minecraft_versions=1.21.2-pre1
 loader_version=0.16.5
-yarn_mappings=24w40a+build.11
+yarn_mappings=1.21.2-pre1+build.3
 
 # Mod Properties
 mod_version=3.0.1-beta.1
@@ -15,7 +15,7 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.105.2+1.21.2
+fabric_api_version=0.105.3+1.21.2
 modmenu_version=
 blockus_version=
 terraform_version=
