--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
-minecraft_version=1.21.2-pre2
-supported_minecraft_versions=1.21.2-pre2
+minecraft_version=1.21.2-pre5
+supported_minecraft_versions=1.21.2-pre5
 loader_version=0.16.7
-yarn_mappings=1.21.2-pre2+build.4
+yarn_mappings=1.21.2-pre5+build.1
 
 # Mod Properties
-mod_version=3.0.1-beta.2
+mod_version=3.0.2-beta.1
 maven_group=pers.solid
 archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.105.3+1.21.2
+fabric_api_version=0.106.0+1.21.2
 modmenu_version=
 blockus_version=
 terraform_version=
@@ -26,6 +26,6 @@ rei_version=
 # If the build fails, try comment out or undo commenting some of the following lines.
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 loom_fabric_repository=https://repository.hanbings.io/proxy/
